--- a/app/src/main/res/layout/setbackground_main.xml
+++ b/app/src/main/res/layout/setbackground_main.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/background">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="#333232"
-        android:textColor="@android:color/white"
-        android:drawablePadding="15dp"
-        android:text="聊天背景"
-        android:paddingTop="15dp"
-        android:paddingLeft="50dp" />
-
+   <TextView
+       android:layout_width="match_parent"
+       android:layout_height="45dp"
+       android:background="#333232"
+       android:textColor="@android:color/white"
+       android:drawablePadding="15dp"
+       android:text="聊天背景"
+       android:paddingTop="15dp"
+       android:paddingLeft="50dp"
+       />
     <Button
         android:id="@+id/btn_choose_bgpic"
         android:layout_width="match_parent"
@@ -25,10 +23,10 @@
         android:gravity="left"
         android:text="选择背景图"
         android:paddingTop="15dp"
-        android:paddingLeft="12dp" />
-
+        android:paddingLeft="12dp"
+        />
     <Button
-        android:id="@+id/bg_from_gallery"
+
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="@android:color/white"
@@ -36,10 +34,9 @@
         android:text="从相册中选择"
         android:gravity="left"
         android:paddingTop="15dp"
-        android:paddingLeft="12dp" />
-
+        android:paddingLeft="12dp"
+        />
     <Button
-        android:id="@+id/bg_from_camera"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="@android:color/white"
@@ -47,5 +44,6 @@
         android:text="拍一张"
         android:paddingTop="15dp"
         android:gravity="left"
-        android:paddingLeft="12dp" />
+        android:paddingLeft="12dp"
+        />
 </LinearLayout>
