--- a/app/src/main/res/layout/choosebgpic_item.xml
+++ b/app/src/main/res/layout/choosebgpic_item.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/iv_item"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:scaleType="fitXY"
-        android:src="@mipmap/love" />
+   <ImageView
+       android:id="@+id/iv_item"
+       android:layout_width="140dp"
+       android:layout_height="140dp"
+       android:scaleType="fitXY"
+       android:src="@mipmap/love"/>
 </LinearLayout>
