--- a/app/src/main/res/layout/receive_text_item.xml
+++ b/app/src/main/res/layout/receive_text_item.xml
@@ -2,16 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
+    android:orientation="vertical" >
     <TextView
-        android:id="@+id/receive_date"
+        android:id="@+id/id_form_msg_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="3dp"
         android:layout_gravity="center"
         android:background="#bebebe"
-        android:text="456"
+        android:text="2012-12-12 12:12:12"
+        android:visibility="visible"
         android:textColor="#f5f5f5"
         android:textSize="12sp" />
 
@@ -20,16 +19,14 @@
         android:layout_height="wrap_content"
         android:gravity="left"
         android:paddingTop="5dp"
-        android:orientation="horizontal">
-
+        android:orientation="horizontal" >
         <ImageView
-            android:id="@+id/rt_avatar"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:scaleType="centerCrop"
-            android:paddingLeft="5dp"
-            android:src="@mipmap/al" />
-
+                android:id="@+id/rt_avatar"
+                android:layout_width="45dp"
+                android:layout_height="45dp"               
+                android:scaleType="centerCrop"
+                android:paddingLeft="5dp"
+                android:src="@mipmap/al" />
         <TextView
             android:id="@+id/receive_text"
             android:layout_width="wrap_content"
