--- a/app/src/main/res/layout/send_text_item.xml
+++ b/app/src/main/res/layout/send_text_item.xml
@@ -6,13 +6,12 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/send_date"
-        android:padding="3dp"
+        android:id="@+id/id_to_msg_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="#bebebe"
-        android:text=""
+        android:text="2012-12-12 12:12:12"
         android:textColor="#f5f5f5"
         android:textSize="12sp" />
 
