--- a/app/src/main/res/layout/splash_main.xml
+++ b/app/src/main/res/layout/splash_main.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
     <ImageView
-        android:id="@+id/iv_splash"
         android:layout_centerInParent="true"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:background="@mipmap/icon" />
+        android:src="@mipmap/love"
+        />
 </RelativeLayout>
